# BHDR

./: .gitignore  README.md  bhdr_v2_weights.pth  pyproject.toml  requirements.txt  startingAnOCR.ipynb
bhdr/: __init__.py  data.py  inference.py  model.py  train.py
bhdr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: api.py  inference.py  train.py
tests/: test_pipeline.py
