[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bhdr"
version = "0.1.0"
authors = [
  { name="Shin Thant Tun" }
]
description = "A PyTorch CNN for classifying handwritten Burmese digits (၀-၉)."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "torchvision",
    "Pillow"
]